--- a/src/configs/default.yaml
+++ b/src/configs/default.yaml
@@ -4,4 +4,6 @@ options:
   level: "tile" # feature level: "tile" or "slide"
   context_dim: 0 # dimension of context when visualizing tiles when level is "tile" (in number of neighbouring tiles)
   num_tiles_per_wsi: 1 # number of tiles to sample per wsi when level is "tile"
+  tsne:
+    perplexity: 30
 
